--- a/test.html
+++ b/test.html
@@ -556,14 +556,22 @@
       transition: opacity 0.5s ease;
     }
     body.light-mode .footer-text { opacity: 0.7; }
-    .confetti {
+    .snowflake {
       position: fixed;
+      top: -20px;
+      color: white;
       user-select: none;
       pointer-events: none;
       z-index: 9999;
-      animation: fall-confetti linear infinite;
-      font-size: 1.5rem;
-      font-weight: bold;
+      animation: fall linear infinite;
+      opacity: 0.6;
+      filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.6));
+      transition: color 0.5s ease, filter 0.5s ease;
+    }
+    body.light-mode .snowflake {
+      color: #1a1a1a;
+      filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.3));
+      opacity: 0.5;
     }
     .particle {
       position: fixed;
