--- a/beta.html
+++ b/beta.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
     :root {
@@ -555,14 +556,22 @@
       transition: opacity 0.5s ease;
     }
     body.light-mode .footer-text { opacity: 0.7; }
-    .confetti {
+    .snowflake {
       position: fixed;
-      width: 10px;
-      height: 10px;
+      top: -20px;
+      color: white;
       user-select: none;
       pointer-events: none;
       z-index: 9999;
-      animation: fall-confetti linear infinite;
+      animation: fall linear infinite;
+      opacity: 0.6;
+      filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.6));
+      transition: color 0.5s ease, filter 0.5s ease;
+    }
+    body.light-mode .snowflake {
+      color: #1a1a1a;
+      filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.3));
+      opacity: 0.5;
     }
     .particle {
       position: fixed;
@@ -605,11 +614,7 @@
       color: var(--primary);
       font-weight: 600;
     }
-    @keyframes fall-confetti { 
-      to { 
-        transform: translateY(100vh) rotate(720deg); 
-      } 
-    }
+    @keyframes fall { to { transform: translateY(100vh) rotate(360deg); } }
     @keyframes float { 0%, 100% { transform: translateX(-50%) translateY(0); } 50% { transform: translateX(-50%) translateY(-10px); } }
     @keyframes pulse-glow { 0%, 100% { filter: drop-shadow(0 0 20px rgba(212, 163, 115, 0.5)); } 50% { filter: drop-shadow(0 0 30px rgba(212, 163, 115, 0.8)); } }
     @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
@@ -663,7 +668,7 @@
         animation-iteration-count: 1 !important;
         transition-duration: 0.01ms !important;
       }
-      .confetti, .particle { display: none; }
+      .snowflake, .particle { display: none; }
     }
   </style>
 </head>
@@ -894,19 +899,16 @@
       lucide.createIcons();
     }
     loadProducts();
-    function createConfetti() {
-      const confetti = document.createElement('div');
-      confetti.className = 'confetti';
-      const colors = ['#ff6b6b', '#4ecdc4', '#45b7d1', '#f9ca24', '#6c5ce7', '#a29bfe', '#fd79a8', '#fdcb6e', '#e17055', '#00b894'];
-      const shapes = ['◆', '●', '■', '▲', '★'];
-      confetti.textContent = shapes[Math.floor(Math.random() * shapes.length)];
-      confetti.style.color = colors[Math.floor(Math.random() * colors.length)];
-      confetti.style.left = Math.random() * 100 + '%';
-      confetti.style.fontSize = (Math.random() * 1 + 0.5) + 'rem';
-      confetti.style.animationDuration = (Math.random() * 3 + 3) + 's';
-      confetti.style.opacity = Math.random() * 0.6 + 0.4;
-      document.body.appendChild(confetti);
-      setTimeout(function() { confetti.remove(); }, 6000);
+    function createSnowflake() {
+      const snowflake = document.createElement('div');
+      snowflake.className = 'snowflake';
+      snowflake.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="2" x2="22" y1="12" y2="12"/><line x1="12" x2="12" y1="2" y2="22"/><path d="m20 16-4-4 4-4"/><path d="m4 8 4 4-4 4"/><path d="m16 4-4 4-4-4"/><path d="m8 20 4-4 4 4"/></svg>';
+      snowflake.style.left = Math.random() * 100 + '%';
+      snowflake.style.fontSize = (Math.random() * 1.2 + 0.6) + 'rem';
+      snowflake.style.animationDuration = (Math.random() * 4 + 6) + 's';
+      snowflake.style.opacity = Math.random() * 0.4 + 0.2;
+      document.body.appendChild(snowflake);
+      setTimeout(function() { snowflake.remove(); }, 10000);
     }
     function createParticle() {
       const particle = document.createElement('div');
@@ -917,8 +919,8 @@
       document.body.appendChild(particle);
     }
     if (!window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
-      setInterval(createConfetti, 300);
-      for (var i = 0; i < 15; i++) createConfetti();
+      setInterval(createSnowflake, 400);
+      for (var i = 0; i < 10; i++) createSnowflake();
       for (var j = 0; j < 20; j++) createParticle();
     }
   </script>
