--- a/beta.html
+++ b/beta.html
@@ -759,7 +759,7 @@
     <h2 class="section-title">Vznik</h2>
     <div class="story-content">
       <p class="story-text">
-        Jednoho dne přinesl <strong>Teodor</strong> do školy ztvrdlé těsto v krabičce od TicTac. V následujících dnech donesl <strong>Adam</strong> mouku, cukr a vajíčko, a vznikl náš první výtvor – <strong>M&M's chléb</strong>. Nejsme však žádná sólovka, jsme tým: <strong>Marek</strong> vaří s námi, rozdělujeme si ingredience férově a právě on přišel s názvem naší <strong>„Super Pekárny"</strong>. Od té doby tvoříme jeden výtvor za druhým.
+        Všechno začalo <strong>Teodorovým</strong> ztvrdlým těstem v krabičce od TicTaců. Druhý den přinesl mouku – první pokus byl nepoživatelný. Třetí den přinesl <strong>Adam</strong> mouku, cukr a vajíčko, a M&M's chléb byl na světě. Název <strong>„Super Pekárna"</strong> vymyslel <strong>Marek</strong>. Od té doby pečeme jeden výtvor za druhým.
       </p>
     </div>
   </section>
