--- a/beta.html
+++ b/beta.html
@@ -778,6 +778,14 @@
     const defaultImage = 'neco_se_nepovedlo.png';
     const products = [
       {
+        name: "Linecké cukroví",
+        description: "",
+        image: "",
+        rating: 5,
+        ingredients: "Mouka, Cukr, Kůra z citrónu, Kypřící prášek, Vajíčko, Máslo, Malinový džem",
+        created: "2025-12-17"
+      },
+      {
         name: "Rafaelo",
         description: "",
         image: "rafaelo.jpg",
