--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -394,21 +394,13 @@
         const funnyMessages = [
             '🤔 Hmm, to vypadá složitě...',
             '⏳ Skoro hotovo... nebo možná ne...',
-            '🎲 Házím kostkou, jestli to spočítat...',
             '🧠 Používám 0.001% mozku...',
             '☕ Dávám si kafíčko, chvilku strpení...',
-            '🎯 98% hotovo! Ale to poslední 2% je problém...',
-            '🐌 Loading... ale pomalu, jak má...',
-            '🎪 Připravuji výmluvy, proč to nejde...',
-            '🎭 Předstírám, že něco dělám...',
             '🔮 Hádám výsledek z křišťálové koule...',
-            '🎨 Možná kdyby to bylo art, ne matematika...',
-            '🌙 Čekám na měsíc v úplňku, pak to možná půjde...',
             '🎵 Zpívám si "Let it go"...',
-            '🍕 Objednávám pizzu místo počítání...',
-            '🎢 Jedu na horské dráze pochybností...',
-            '🦥 Lenochod by byl rychlejší...'
-        ];
+            '🚀 Kradu data z NASA'
+            '😭 Bože já tuto práci nesnáším'
+        ];  
 
         function appendNumber(num) {
             if (calculating) return;
