--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -680,7 +680,7 @@
             '🎵 Zpívám si "Let it go"...',
             '🚀 Kradu data z NASA...',
             '😭 Bože já tuto práci nesnáším...',
-            '🤖 Ptám se ChatGPT jestli ví...',
+            '🤖 Ptám se ChatGPT jestli ví...'
         ];  
 
         function createRipple(event) {
