--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kalkulačka</title>
+    <title>Super Kalkulačka</title>
     <style>
         * {
             margin: 0;
@@ -847,7 +847,7 @@
                 clearInterval(progressInterval);
                 clearInterval(messageInterval);
                 display.classList.remove('calculating');
-                display.textContent = 'Já nevím vole, nech mě být.';
+                display.textContent = 'Co si myslíš že jsem? Nějaká kalkulačka? Otravuj si někoho jinýho. >:(';
                 display.classList.add('small-text');
                 document.getElementById('progressContainer').style.display = 'none';
                 
